Coding with the new library
For now, the background image for the graphical player doesn't work...